New entries should be added at the top

2005-05-10 Applied Eric's contour mem leak fixes - JDH

2005-05-10 Extended python agg wrapper and started implementing backend_agg2,
           an agg renderer based on the python wrapper.  This will be
           more flexible and easier to extend than the current
           backend_agg.  See also examples/agg_test.py - JDH

2005-05-09 Added Marcin's no legend patch to exclude lines from the
           autolegend builder

           plot(x, y, label='nolegend')

2005-05-05 Upgraded to agg23

2005-05-05 Added newscalarformatter_demo.py to examples. -DSD 

2005-05-04 Added NewScalarFormatter. Improved formatting of ticklabels, 
           scientific notation, and the ability to plot large large 
           numbers with small ranges, by determining a numerical offset. 
           See ticker.NewScalarFormatter for more details. -DSD 

2005-05-03 Added the option to specify a delimiter in pylab.load -DSD

2005-04-28 Added Darren's line collection example

2005-04-28 Fixed aa property in agg - JDH

2005-04-27 Set postscript page size in .matplotlibrc - DSD

2005-04-26 Added embedding in qt example. - JDH

2005-04-14 Applied Michael Brady's qt backend patch: 1) fix a bug
           where keyboard input was grabbed by the figure and not
           released  2) turn on cursor changes  3) clean up a typo
           and commented-out print statement. - JDH


2005-04-14 Applied Eric Firing's masked data lines patch and contour
           patch.  Support for masked arrays has been added to the
           plot command and to the Line2D object.  Only the valid
           points are plotted.  A "valid_only" kwarg was added to the
           get_xdata() and get_ydata() methods of Line2D; by default
           it is False, so that the original data arrays are
           returned. Setting it to True returns the plottable points.
           - see examples/masked_demo.py - JDH
